[package]
name = "spotify_manage"
version = "0.1.0"
authors = ["Tobeqz <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "1.9.1"
zvariant = "2.6.0"
structopt = "0.3.21"
serde = "1.0.125"
serde_json = "1.0.64"